# disaster-tweets

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
notebooks/: data_exploration.ipynb  decision_tree.ipynb  sklearn_models.ipynb
src/disaster_tweets/: cli.py  deep.py  sklearn_models.py  spacy_model.py  tokenizer.py  tweet_data.py  vocab.py
